# devops-newrelic-mcp-with-slack-chatbot

./: .env.example  .gitignore  .prettierignore  Makefile  readme.md  slack-app_manifest.json
_design/: monitoring_requirements.md  requirements.md
bot/: Dockerfile  claude_client.py  conversation_manager.py  main.py  nr_mcp_client.py  pyproject.toml  slack_handler.py
infra/: app.py  cdk.json  pyproject.toml
infra/stacks/: bot_stack.py  secrets_stack.py
monitoring/: dashboard.json.tftpl  dashboard.tf  drop_rules.tf  events_to_metrics.tf  main.tf  variables.tf
