[project]
name = "newrelic-slack-bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "slack-bolt>=1.21",
    "aiohttp>=3.9",
    "anthropic[bedrock]>=0.40",
    "httpx>=0.27",
    "boto3>=1.35",
    "python-dotenv>=1.0",
    "newrelic>=10.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
